dashboard responsive and print styles

--- a/resources/assets/scss/main.scss
+++ b/resources/assets/scss/main.scss
@@ -39,10 +39,10 @@
 @import "pages/misc/login";
 @import "pages/account/account";
 
-
 // dashboard
 @import "dashboard/dashboard";
 @import "dashboard/animations";
+@import "dashboard/dashboard-printstyle";
 
 // forum
 @import "forum/forum";
