--- a/resources/assets/scss/pages/boomerang/_boomerang.scss
+++ b/resources/assets/scss/pages/boomerang/_boomerang.scss
@@ -63,6 +63,7 @@
         padding-left: 25px;
         color: #707070;
         border-bottom: 1px solid #c6c6c6;
+        display: none; //temp fix for UX.
         div {
             padding: 10px 0;
         }
