--- a/resources/assets/scss/pages/boomerang/_cloud.scss
+++ b/resources/assets/scss/pages/boomerang/_cloud.scss
@@ -40,23 +40,23 @@ div.jqcloud span.w2 { font-size: 150%; }
 div.jqcloud span.w1 { font-size: 100%; }
 
 /* colors */
-div.jqcloud { color: #09f; }
+div.jqcloud { color: #F16060; }
 div.jqcloud a { color: inherit; }
-div.jqcloud a:hover { color: #0df; }
-div.jqcloud a:hover { color: #0cf; }
+div.jqcloud a:hover { color: #F16060; }
+div.jqcloud a:hover { color: #F16060; }
 div.jqcloud span.w10 { color: #F16060; }
 div.jqcloud span.w9 { color: #F16060; }
 div.jqcloud span.w8 { color: #F16060; }
-div.jqcloud span.w7 { color: #D85B5C; }
-div.jqcloud span.w6 { color: #90c5f0; }
-div.jqcloud span.w5 { color: #90a0dd; }
+div.jqcloud span.w7 { color: #F16060; }
+div.jqcloud span.w6 { color: #F16060; }
+div.jqcloud span.w5 { color: #F16060; }
 
 div.jqcloud span.w4 { color: #E65F60; }
 
-div.jqcloud span.w3 { color: #a0ddff; }
-div.jqcloud span.w2 { color: #99ccee; }
+div.jqcloud span.w3 { color: #F16060; }
+div.jqcloud span.w2 { color: #F16060; }
 
-div.jqcloud span.w1 { color: #EC6262; }
+div.jqcloud span.w1 { color: #F16060; }
 
 
 // cloud styles for input.
