--- a/resources/assets/scss/pages/un-stuck/_un-stuck.scss
+++ b/resources/assets/scss/pages/un-stuck/_un-stuck.scss
@@ -71,18 +71,27 @@
 
             &:focus {
                 background: $lightRed;
-                color:white;
+                color: white;
+                border: 2px solid $lightRed;
+            }
+
+            &:hover {
+                cursor: pointer;
+                background: $lightRed;
+                color: white;
                 border: 2px solid $lightRed;
             }
 
         }
 
-        textarea:focus + .icon {
+        textarea:focus + .icon,
+        textarea:hover + .icon {
             svg path {
                 fill: white;
             }
         }
-        textarea:focus + .icon + label {
+        textarea:focus + .icon + label,
+        textarea:hover + .icon + label {
             color:white;
         }
 
