--- a/resources/assets/scss/pages/visualise/_visualise.scss
+++ b/resources/assets/scss/pages/visualise/_visualise.scss
@@ -62,6 +62,11 @@
 }
 
 .dreamboard {
+
+    > .inner {
+        align-items: inherit !important;
+    }
+
     h1.title {
         &:after {
             width: 37px;
@@ -214,7 +219,7 @@
         height: 129px;
         background: $grey;
         box-shadow: 0 0 30px rgba($fontColour, 0.05);
-        display:flex;
+        display: flex;
         justify-content: center;
         align-items: center;
         position: relative;
