--- a/resources/assets/scss/core/_module.scss
+++ b/resources/assets/scss/core/_module.scss
@@ -26,6 +26,10 @@
                 padding: 80px $gutter;
                 align-items: inherit;
             }
+
+            .content {
+
+            }
         }
 
         &.has-container {
@@ -100,7 +104,6 @@
     > .inner {
         .content {
             width: 445px;
-            width: 445px;
             margin: 0 auto;
             font-size: 17px;
             line-height: 26px;
@@ -167,8 +170,11 @@
         max-width: 445px;
         width: 100%;
         text-align: center;
-        margin-bottom: 40px;
         line-height: 26px;
+    }
+
+    blockquote {
+        max-width: 445px;
     }
 
     .actions {
