set cursor pointer for dashboard section headers

--- a/resources/assets/scss/dashboard/_dashboard.scss
+++ b/resources/assets/scss/dashboard/_dashboard.scss
@@ -117,6 +117,7 @@
         position: relative;
         float: left;
         padding: 6px 20px;
+        cursor:pointer;
 
         @include breakpoint(670px) {
             font-size: 14px;
