--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3716,6 +3716,7 @@ section.account-section .content p {
   position: relative;
   float: left;
   padding: 6px 20px;
+  cursor: pointer;
 }
 @media (max-width: 670px) {
   /* line 115, ../../resources/assets/scss/dashboard/_dashboard.scss */
@@ -3731,7 +3732,7 @@ section.account-section .content p {
     padding: 7px 10px;
   }
 }
-/* line 131, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 132, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .header h2:before {
   position: relative;
   font-family: "icomoon";
@@ -3741,15 +3742,15 @@ section.account-section .content p {
   font-size: 24px;
 }
 
-/* line 142, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 143, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.actions {
   float: right;
 }
-/* line 145, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 146, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.actions li {
   display: inline-block;
 }
-/* line 152, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 153, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.actions li.arrow {
   padding: 8.5px 15px;
   background: transparent url('../img/dashboard-arrow.svg?1439758397') center center no-repeat;
@@ -3759,18 +3760,18 @@ ul.actions li.arrow {
   width: 40px;
   transform-origin: center center;
 }
-/* line 162, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 163, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.actions li.forum {
   padding: 8.5px 15px;
   border-right: 1px solid #F89594;
 }
 @media (max-width: 620px) {
-  /* line 162, ../../resources/assets/scss/dashboard/_dashboard.scss */
+  /* line 163, ../../resources/assets/scss/dashboard/_dashboard.scss */
   ul.actions li.forum {
     border: none;
   }
 }
-/* line 170, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 171, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.actions li.forum a.forum-icon {
   font-size: 14px;
   color: white;
@@ -3778,7 +3779,7 @@ ul.actions li.forum a.forum-icon {
   text-transform: initial;
   position: relative;
 }
-/* line 177, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 178, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.actions li.forum a.forum-icon:before {
   position: absolute;
   font-family: "icomoon";
@@ -3788,45 +3789,45 @@ ul.actions li.forum a.forum-icon:before {
   left: -28px;
 }
 @media (max-width: 620px) {
-  /* line 177, ../../resources/assets/scss/dashboard/_dashboard.scss */
+  /* line 178, ../../resources/assets/scss/dashboard/_dashboard.scss */
   ul.actions li.forum a.forum-icon:before {
     position: relative;
     top: 2px;
     left: 0;
   }
 }
-/* line 192, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 193, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.actions li.forum a.forum-icon span {
   line-height: 21px;
 }
 @media (max-width: 620px) {
-  /* line 192, ../../resources/assets/scss/dashboard/_dashboard.scss */
+  /* line 193, ../../resources/assets/scss/dashboard/_dashboard.scss */
   ul.actions li.forum a.forum-icon span {
     display: none;
   }
 }
-/* line 202, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 203, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.actions li.unlock-countdown {
   font-size: 14px;
   text-transform: initial;
   font-weight: 500;
   position: relative;
 }
-/* line 208, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 209, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.actions li.unlock-countdown > .inner {
   height: 100%;
 }
 @media (max-width: 620px) {
-  /* line 208, ../../resources/assets/scss/dashboard/_dashboard.scss */
+  /* line 209, ../../resources/assets/scss/dashboard/_dashboard.scss */
   ul.actions li.unlock-countdown > .inner {
     display: none !important;
   }
 }
-/* line 217, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 218, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.actions li.unlock-countdown.unlocked:before {
   content: "\e622";
 }
-/* line 222, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 223, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.actions li.unlock-countdown:before {
   position: absolute;
   font-family: "icomoon";
@@ -3834,7 +3835,7 @@ ul.actions li.unlock-countdown:before {
   font-size: 16px;
 }
 
-/* line 241, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 242, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .tagcloud {
   height: 200px;
   margin-bottom: 30px;
@@ -3842,7 +3843,7 @@ ul.actions li.unlock-countdown:before {
   text-transform: lowercase;
 }
 
-/* line 248, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 249, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .small-dashboard {
   font-size: 14px;
   font-weight: 500;
@@ -3850,198 +3851,198 @@ ul.actions li.unlock-countdown:before {
   text-transform: initial;
   border: 0;
 }
-/* line 255, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 256, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .small-dashboard:hover {
   border: 0;
 }
 
-/* line 261, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 262, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-home.page-icon:after {
   content: '\e632';
   left: 3px;
 }
 
-/* line 268, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 269, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-welcome.module-icon:after,
 .module-welcome .page-icon:after {
   content: "\e601";
 }
 
-/* line 275, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 276, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-boomerang h2:before {
   content: "\e600";
 }
-/* line 279, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 280, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-boomerang.module-icon:after,
 .module-boomerang .page-icon:after {
   content: '\e600';
 }
 
-/* line 286, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 287, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-un-stuck h2:before {
   content: "\e602";
 }
-/* line 290, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 291, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-un-stuck.module-icon:after,
 .module-un-stuck .page-icon:after {
   content: "\e602";
 }
 
-/* line 297, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 298, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-visualise h2:before {
   content: "\e603";
 }
-/* line 301, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 302, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-visualise.module-icon:after,
 .module-visualise .page-icon:after {
   content: "\e603";
 }
-/* line 307, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 308, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-visualise .content img {
   width: 100%;
 }
 
-/* line 314, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 315, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-fear-courage h2:before {
   content: "\e604";
 }
-/* line 318, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 319, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-fear-courage.module-icon:after,
 .module-fear-courage .page-icon:after {
   content: "\e604";
 }
 
-/* line 325, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 326, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-giving h2:before {
   content: "\e605";
 }
-/* line 329, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 330, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-giving.module-icon:after,
 .module-giving .page-icon:after {
   content: "\e605";
 }
 
-/* line 336, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 337, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-gratitude h2:before {
   content: "\e606";
 }
-/* line 340, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 341, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-gratitude.module-icon:after,
 .module-gratitude .page-icon:after {
   content: "\e606";
 }
-/* line 345, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 346, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-gratitude ul.experience {
   max-width: 445px;
   margin: auto auto 30px;
 }
-/* line 348, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 349, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-gratitude ul.experience li {
   color: #f16060;
   font-style: italic;
 }
-/* line 351, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 352, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-gratitude ul.experience li span {
   font-weight: 500;
   font-style: normal;
   color: #252E33;
 }
 
-/* line 361, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 362, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-sustainable-change h2:before {
   content: "\e607";
 }
-/* line 365, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 366, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-sustainable-change.module-icon:after,
 .module-sustainable-change .page-icon:after {
   content: "\e607";
 }
 
-/* line 372, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 373, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-you-to-you h2:before {
   content: "\e608";
 }
-/* line 375, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 376, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-you-to-you.module-icon:after,
 .module-you-to-you .page-icon:after {
   content: "\e608";
 }
 
-/* line 382, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 383, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list .content {
   max-width: 920px;
   margin: auto;
 }
-/* line 389, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 390, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list li.is-complete .header.locked {
   background-color: transparent;
 }
-/* line 394, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 395, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list li.is-complete .actions li.forum {
   border-right: 1px solid #F89594 !important;
 }
 @media (max-width: 620px) {
-  /* line 394, ../../resources/assets/scss/dashboard/_dashboard.scss */
+  /* line 395, ../../resources/assets/scss/dashboard/_dashboard.scss */
   ul.module-list li.is-complete .actions li.forum {
     border: none !important;
   }
 }
 @media (max-width: 500px) {
-  /* line 393, ../../resources/assets/scss/dashboard/_dashboard.scss */
+  /* line 394, ../../resources/assets/scss/dashboard/_dashboard.scss */
   ul.module-list li.is-complete .actions {
     width: 100%;
   }
 }
-/* line 408, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 409, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list li.is-unlocked {
   border-top: 1px solid #e6e6e6;
 }
-/* line 412, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 413, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list li.is-unlocked .actions li.forum {
   border-right: 1px solid #e6e6e6;
 }
-/* line 418, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 419, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list li.is-locked {
   border-top: 1px solid #e6e6e6;
 }
-/* line 421, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 422, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list li.is-locked .header {
   background-color: transparent;
   color: #c5c5c5;
 }
-/* line 426, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 427, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list li.is-locked:last-child {
   border-bottom: 1px solid #e6e6e6;
 }
-/* line 431, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 432, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list li.is-locked .actions li.unlock-countdown {
   padding: 8.5px 15px;
 }
 @media (max-width: 500px) {
-  /* line 431, ../../resources/assets/scss/dashboard/_dashboard.scss */
+  /* line 432, ../../resources/assets/scss/dashboard/_dashboard.scss */
   ul.module-list li.is-locked .actions li.unlock-countdown {
     width: 100%;
   }
 }
-/* line 438, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 439, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list li.is-locked .actions li.unlock-countdown:before {
   left: 0;
   top: inherit;
 }
 @media (max-width: 620px) {
-  /* line 438, ../../resources/assets/scss/dashboard/_dashboard.scss */
+  /* line 439, ../../resources/assets/scss/dashboard/_dashboard.scss */
   ul.module-list li.is-locked .actions li.unlock-countdown:before {
     left: inherit;
     top: 0;
     position: relative;
   }
 }
-/* line 449, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 450, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list li.is-locked .actions li.arrow {
   visibility: hidden;
 }
 @media (max-width: 620px) {
-  /* line 449, ../../resources/assets/scss/dashboard/_dashboard.scss */
+  /* line 450, ../../resources/assets/scss/dashboard/_dashboard.scss */
   ul.module-list li.is-locked .actions li.arrow {
     display: none;
   }
