--- a/resources/assets/scss/dashboard/_dashboard.scss
+++ b/resources/assets/scss/dashboard/_dashboard.scss
@@ -43,6 +43,10 @@
 
             .inner-padding {
                 padding: 60px 0;
+                .content-width{
+                    margin: 0 auto;
+                    max-width: 445px;
+                }
             }
         }
     }
