--- a/resources/assets/scss/pages/boomerang/_cloud.scss
+++ b/resources/assets/scss/pages/boomerang/_cloud.scss
@@ -42,12 +42,12 @@ div.jqcloud span.w1 { font-size: 100%; }
 /* colors */
 div.jqcloud { color: #F16060; }
 div.jqcloud a { color: inherit; }
-div.jqcloud a:hover { color: #F16060; }
+div.jqcloud a:hover { color: #E65F60; }
 div.jqcloud a:hover { color: #F16060; }
 div.jqcloud span.w10 { color: #F16060; }
-div.jqcloud span.w9 { color: #F16060; }
+div.jqcloud span.w9 { color: #E65F60; }
 div.jqcloud span.w8 { color: #F16060; }
-div.jqcloud span.w7 { color: #F16060; }
+div.jqcloud span.w7 { color: #E65F60; }
 div.jqcloud span.w6 { color: #F16060; }
 div.jqcloud span.w5 { color: #F16060; }
 
