--- a/public/css/main.css
+++ b/public/css/main.css
@@ -251,20 +251,25 @@ h1.plain.margin-bottom {
 .auth {
   position: fixed;
   top: 0;
-  right: 0;
+  right: 50px;
   z-index: 99;
   height: 50px;
   line-height: 50px;
-  padding-right: 20px;
 }
-/* line 59, ../../resources/assets/scss/core/_base.scss */
+@media (max-width: 620px) {
+  /* line 50, ../../resources/assets/scss/core/_base.scss */
+  .auth {
+    right: 20px;
+  }
+}
+/* line 62, ../../resources/assets/scss/core/_base.scss */
 .auth a {
   color: #252e33;
   text-decoration: none;
   font-weight: normal;
   position: relative;
 }
-/* line 66, ../../resources/assets/scss/core/_base.scss */
+/* line 69, ../../resources/assets/scss/core/_base.scss */
 .auth a.logout:before {
   content: '\e622';
   position: absolute;
@@ -275,7 +280,7 @@ h1.plain.margin-bottom {
   left: -20px;
   top: -13px;
 }
-/* line 80, ../../resources/assets/scss/core/_base.scss */
+/* line 83, ../../resources/assets/scss/core/_base.scss */
 .auth a.login:before {
   content: '\e621';
   position: absolute;
@@ -2619,55 +2624,54 @@ div.jqcloud span.w1 {
 }
 /* line 78, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .limiting-beliefs .belief textarea:hover {
-  cursor: pointer;
   background: #f16060;
   color: white;
   border: 2px solid #f16060;
 }
-/* line 89, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 88, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .limiting-beliefs .belief textarea:focus + .icon svg path,
 .limiting-beliefs .belief textarea:hover + .icon svg path {
   fill: white;
 }
-/* line 93, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 92, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .limiting-beliefs .belief textarea:focus + .icon + label,
 .limiting-beliefs .belief textarea:hover + .icon + label {
   color: white;
 }
-/* line 99, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 98, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .limiting-beliefs .actions {
   margin-top: 60px;
 }
 
-/* line 105, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 104, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .affirmations h1.plain {
   margin-bottom: 30px;
 }
 
-/* line 110, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 109, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations {
   width: 695px;
   margin-left: -125px;
 }
 @media (max-width: 500px) {
-  /* line 110, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+  /* line 109, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
   .positive-affirmations {
     width: auto;
     margin-left: auto;
   }
 }
-/* line 119, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 118, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .positive-affirmations-fields {
   display: flex;
   justify-content: space-between;
 }
 @media (max-width: 920px) {
-  /* line 119, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+  /* line 118, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
   .positive-affirmations .positive-affirmations-fields {
     display: block;
   }
 }
-/* line 128, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 127, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .the-affirmation,
 .positive-affirmations .the-belief {
   width: 221px;
@@ -2676,13 +2680,13 @@ div.jqcloud span.w1 {
   position: relative;
 }
 @media (max-width: 920px) {
-  /* line 128, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+  /* line 127, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
   .positive-affirmations .the-affirmation,
   .positive-affirmations .the-belief {
     margin: 40px auto;
   }
 }
-/* line 140, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 139, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .the-belief {
   border: 2px solid transparent;
   border-image: linear-gradient(23deg, #abafb1 0%, rgba(171, 175, 177, 0) 90%);
@@ -2693,18 +2697,18 @@ div.jqcloud span.w1 {
   margin-bottom: 15px;
 }
 @media (max-width: 920px) {
-  /* line 140, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+  /* line 139, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
   .positive-affirmations .the-belief {
     margin: 15px auto;
   }
 }
-/* line 154, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 153, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .the-belief .number {
   position: absolute;
   top: 6px;
   left: 10px;
 }
-/* line 160, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 159, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .the-belief p.limiting-belief-text {
   margin: 0;
   padding: 0;
@@ -2713,17 +2717,17 @@ div.jqcloud span.w1 {
   line-height: 22px;
   margin: 12px 0;
 }
-/* line 169, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 168, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .the-belief strong {
   font-size: 15px;
 }
-/* line 176, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 175, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .the-affirmation label {
   position: absolute;
   top: 6px;
   left: 10px;
 }
-/* line 182, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 181, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .the-affirmation .icon {
   position: absolute;
   bottom: 16px;
@@ -2736,16 +2740,16 @@ div.jqcloud span.w1 {
   border: 0;
   padding: 0;
 }
-/* line 193, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 192, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .the-affirmation .icon svg {
   width: 100%;
   height: 100%;
 }
-/* line 196, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 195, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .the-affirmation .icon svg path {
   fill: #f16060;
 }
-/* line 202, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 201, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .the-affirmation textarea {
   width: 100%;
   height: 100%;
@@ -2760,21 +2764,21 @@ div.jqcloud span.w1 {
   border-image: linear-gradient(23deg, #abafb1 0%, rgba(171, 175, 177, 0) 90%);
   border-image-slice: 1;
 }
-/* line 213, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 212, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .the-affirmation textarea:focus {
   background: #f16060;
   color: white;
   border: 2px solid #f16060;
 }
-/* line 226, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 225, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .the-affirmation textarea:focus + .icon svg path {
   fill: white;
 }
-/* line 231, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 230, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .the-affirmation textarea:focus + label {
   color: white;
 }
-/* line 235, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
+/* line 234, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
 .positive-affirmations .actions {
   margin-top: 60px;
 }
@@ -4226,26 +4230,34 @@ li.is-unlocked.is-complete.is-open .inner-padding {
     color: #f16060;
     text-align: center;
   }
-  /* line 115, ../../resources/assets/scss/dashboard/_dashboard-printstyle.scss */
-  .dashboard-module .module-list .content .inner-padding {
-    opacity: 1;
-  }
-  /* line 122, ../../resources/assets/scss/dashboard/_dashboard-printstyle.scss */
+  /* line 116, ../../resources/assets/scss/dashboard/_dashboard-printstyle.scss */
   .dashboard-module .module-list .header > .inner {
     padding-top: 90px;
   }
-  /* line 127, ../../resources/assets/scss/dashboard/_dashboard-printstyle.scss */
+  /* line 121, ../../resources/assets/scss/dashboard/_dashboard-printstyle.scss */
   .dashboard-module .module-list .header h2 {
     float: none;
   }
-  /* line 132, ../../resources/assets/scss/dashboard/_dashboard-printstyle.scss */
-  .dashboard-module .module-list li {
+  /* line 126, ../../resources/assets/scss/dashboard/_dashboard-printstyle.scss */
+  .dashboard-module .module-list > li {
     page-break-before: always;
     border: 0 !important;
   }
-  /* line 135, ../../resources/assets/scss/dashboard/_dashboard-printstyle.scss */
-  .dashboard-module .module-list li .content {
+  /* line 129, ../../resources/assets/scss/dashboard/_dashboard-printstyle.scss */
+  .dashboard-module .module-list > li .content {
     max-height: 700px !important;
+  }
+
+  /* line 141, ../../resources/assets/scss/dashboard/_dashboard-printstyle.scss */
+  li.is-unlocked.is-complete .content {
+    max-height: 700px;
+    transition: 0s;
+    overflow: visible;
+  }
+  /* line 147, ../../resources/assets/scss/dashboard/_dashboard-printstyle.scss */
+  li.is-unlocked.is-complete .inner-padding {
+    opacity: 1;
+    transition: none;
   }
 }
 /* line 1, ../../resources/assets/scss/forum/_forum.scss */
